--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Escapist" version="0.0.1" targetFramework="net461" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.6" targetFramework="net45" />
+  <package id="MSBuild" version="0.1.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="Unofficial.Ionic.Zip" version="1.9.1.8" targetFramework="net45" />
