--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -3,6 +3,7 @@
   <package id="Escapist" version="0.0.1" targetFramework="net461" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
+  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.6" targetFramework="net45" />
   <package id="MSBuild" version="0.1.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
