Add check course verb to Monitor

--- a/src/uLearn.CourseLib/uLearn.CourseLib.csproj
+++ b/src/uLearn.CourseLib/uLearn.CourseLib.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CourseValidator.cs" />
     <Compile Include="BaseCourseTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
