--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1048,6 +1048,7 @@
     <Content Include="katex\katex.min.css" />
     <Content Include="katex\katex.min.js" />
     <Content Include="Scripts\activate-clipboard.js" />
+    <Content Include="Scripts\analytics-highcharts.js" />
     <Content Include="Scripts\bootstrap.file-input.js" />
     <Content Include="qunit\qunit-1.15.0.css" />
     <Content Include="qunit\qunit-1.15.0.js" />
