Do not recreate students zip if it is already created and actual

--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -126,6 +126,7 @@
     <Compile Include="LruCache.cs" />
     <Compile Include="Model\Blocks\CodeBlock.cs" />
     <Compile Include="Model\Blocks\ExerciseBlock.cs" />
+    <Compile Include="Model\Blocks\LazilyUpdatingZip.cs" />
     <Compile Include="Model\Blocks\ImageGaleryBlock.cs" />
     <Compile Include="Model\Blocks\IncludeBlocksBlock.cs" />
     <Compile Include="Model\Blocks\IncludeCode.cs" />
