redirect from www and azurewebsites

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -78,6 +78,18 @@
 			<remove name="TRACEVerbHandler" />
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 		</handlers>
+		<rewrite>
+			<rules>
+				<rule name="redirect from azurewebsites and WWW to custom domain" stopProcessing="true">
+					<match url="^(.*)$" />
+					<conditions logicalGrouping="MatchAny">
+						<add input="{HTTP_HOST}" pattern="^www\.ulearn\.me" ignoreCase="true" />
+						<add input="{HTTP_HOST}" pattern=".*\.azurewebsites\.net$" ignoreCase="true" />
+					</conditions>
+					<action type="Redirect" redirectType="Found" url="https://ulearn.me/{R:1}" />
+				</rule>
+			</rules>
+		</rewrite>
 	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
