--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -3,10 +3,30 @@
   <package id="Escapist" version="0.0.1" targetFramework="net461" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net461" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.6" targetFramework="net45" />
   <package id="MSBuild" version="0.1.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net461" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net461" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net461" />
+  <package id="System.IO" version="4.0.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net461" />
+  <package id="System.Reflection" version="4.0.0" targetFramework="net461" />
+  <package id="System.Reflection.Extensions" version="4.0.0" targetFramework="net461" />
+  <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net461" />
+  <package id="System.Reflection.Primitives" version="4.0.0" targetFramework="net461" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net461" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net461" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices" version="4.0.0" targetFramework="net461" />
+  <package id="System.Text.Encoding" version="4.0.0" targetFramework="net461" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net461" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net461" />
   <package id="Unofficial.Ionic.Zip" version="1.9.1.8" targetFramework="net45" />
 </packages>
