--- a/src/uLearn.Tests/uLearn.Tests.csproj
+++ b/src/uLearn.Tests/uLearn.Tests.csproj
@@ -138,7 +138,7 @@
     <Compile Include="Md_should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CSharp\RedundantIfStyleValidator_should.cs" />
-    <Compile Include="Quizes\Quiz_Test.cs" />
+    <Compile Include="Quizes\Quiz_should.cs" />
     <Compile Include="RegionsParser_should.cs" />
     <Compile Include="SlideParser_should.cs" />
     <Compile Include="StringExtensions_should.cs" />
@@ -208,6 +208,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CSharp\testProject\projDir\test.csproj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Quizes\test.quiz.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="tests\regions.txt">
