--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -29,8 +29,8 @@
   <package id="Microsoft.Bcl.Async" version="1.0.16" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.Common" version="1.1.1" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="1.1.1" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net45" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.3.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.2-rc" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.13" targetFramework="net45" />
@@ -50,9 +50,16 @@
   <package id="Respond" version="1.2.0" targetFramework="net45" />
   <package id="Sendgrid" version="6.3.4" targetFramework="net45" />
   <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
-  <package id="System.Reflection.Metadata" version="1.1.0" targetFramework="net45" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net45" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net45" />
+  <package id="System.Reflection.Metadata" version="1.2.0" targetFramework="net45" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
