Filter in checking queue by group Add information about review in user interface online Multiline review comments
Fix some bugs:
For manual checking show not last accepted submission but checked submission
NPE in AnalyticsContoller

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1398,6 +1398,7 @@
     <Content Include="Views\Account\JoinGroup.cshtml" />
     <Content Include="Views\Course\CourseInstructorNavbar.cshtml" />
     <Content Include="Views\Admin\ManualExerciseCheckingQueue.cshtml" />
+    <Content Include="Views\Admin\_ManualCheckingQueueFilterForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
