--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -305,6 +305,10 @@
     <Compile Include="Migrations\201609070626183_ChangeCascadeDeletions.Designer.cs">
       <DependentUpon>201609070626183_ChangeCascadeDeletions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609081254216_AddAllowUserToTryAgain.cs" />
+    <Compile Include="Migrations\201609081254216_AddAllowUserToTryAgain.Designer.cs">
+      <DependentUpon>201609081254216_AddAllowUserToTryAgain.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\ExerciseCodeReview.cs" />
     <Compile Include="Models\SlideChecking.cs" />
     <Compile Include="Models\CourseInstructorNavbarViewModel.cs" />
@@ -785,6 +789,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609070626183_ChangeCascadeDeletions.resx">
       <DependentUpon>201609070626183_ChangeCascadeDeletions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609081254216_AddAllowUserToTryAgain.resx">
+      <DependentUpon>201609081254216_AddAllowUserToTryAgain.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
