--- a/src/uLearn.Web/Web.Release.config
+++ b/src/uLearn.Web/Web.Release.config
@@ -28,4 +28,18 @@
       </customErrors>
     -->
   </system.web>
+	<system.webServer>
+		<rewrite>
+			<rules>
+				<rule name="redirect from azurewebsites and WWW to custom domain" stopProcessing="true">
+					<match url="^(.*)$" />
+					<conditions logicalGrouping="MatchAny">
+						<add input="{HTTP_HOST}" pattern="^www\.ulearn\.me" ignoreCase="true" />
+						<add input="{HTTP_HOST}" pattern=".*\.azurewebsites\.net$" ignoreCase="true" />
+					</conditions>
+					<action type="Redirect" redirectType="Found" url="https://ulearn.me/{R:1}" />
+				</rule>
+			</rules>
+		</rewrite>
+	</system.webServer>
 </configuration>
