Add xdt:Transform attribute to Web.Release.config Change ulearn-dev publish settings's build version to Debug

--- a/src/uLearn.Web/Web.Release.config
+++ b/src/uLearn.Web/Web.Release.config
@@ -29,7 +29,7 @@
     -->
   </system.web>
 	<system.webServer>
-		<rewrite>
+		<rewrite xdt:Transform="Insert">
 			<rules>
 				<rule name="redirect from azurewebsites and WWW to custom domain" stopProcessing="true">
 					<match url="^(.*)$" />
