--- a/src/RunCsJob.Api/RunCsJob.Api.csproj
+++ b/src/RunCsJob.Api/RunCsJob.Api.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RunnerSubmition.cs" />
+    <Compile Include="RunnerSubmission.cs" />
     <Compile Include="RunningResults.cs" />
     <Compile Include="Verdict.cs" />
   </ItemGroup>
