--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -310,6 +310,10 @@
     <Compile Include="Migrations\201609081814377_AddFutherCheckingProhibitionAndIndexes.Designer.cs">
       <DependentUpon>201609081814377_AddFutherCheckingProhibitionAndIndexes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609151039376_AddIndexes.cs" />
+    <Compile Include="Migrations\201609151039376_AddIndexes.Designer.cs">
+      <DependentUpon>201609151039376_AddIndexes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\ExerciseCodeReview.cs" />
     <Compile Include="Models\ExerciseCodeReviewModel.cs" />
     <Compile Include="Models\SlideChecking.cs" />
@@ -795,6 +799,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609081814377_AddFutherCheckingProhibitionAndIndexes.resx">
       <DependentUpon>201609081814377_AddFutherCheckingProhibitionAndIndexes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609151039376_AddIndexes.resx">
+      <DependentUpon>201609151039376_AddIndexes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -1410,6 +1417,7 @@
     <Content Include="Views\Admin\ManualExerciseCheckingQueue.cshtml" />
     <Content Include="Views\Admin\_ManualCheckingQueueFilterForm.cshtml" />
     <Content Include="Views\Course\_ExerciseReview.cshtml" />
+    <Content Include="Views\Course\_ExerciseSubmissionsPanel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
