Try to fix slow queries: cache IsRightAnswer for automatic checking for exercise submissions

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -318,6 +318,10 @@
     <Compile Include="Migrations\201609210830542_AddUserExerciseSolutionIndexes.Designer.cs">
       <DependentUpon>201609210830542_AddUserExerciseSolutionIndexes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609211423088_ExtractAutomaticCheckingIsRightAnswer.cs" />
+    <Compile Include="Migrations\201609211423088_ExtractAutomaticCheckingIsRightAnswer.Designer.cs">
+      <DependentUpon>201609211423088_ExtractAutomaticCheckingIsRightAnswer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\ExerciseCodeReview.cs" />
     <Compile Include="Models\ExerciseCodeReviewModel.cs" />
     <Compile Include="Models\SlideChecking.cs" />
@@ -809,6 +813,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201609210830542_AddUserExerciseSolutionIndexes.resx">
       <DependentUpon>201609210830542_AddUserExerciseSolutionIndexes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609211423088_ExtractAutomaticCheckingIsRightAnswer.resx">
+      <DependentUpon>201609211423088_ExtractAutomaticCheckingIsRightAnswer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
