--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -62,6 +62,7 @@
 		</modules>
 		<staticContent>
 			<mimeMap fileExtension="woff" mimeType="application/font-woff" />
+			<mimeMap fileExtension="woff2" mimeType="application/font-woff2" />
 			<mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
 			<mimeMap fileExtension="zip" mimeType="application/zip" />
 		</staticContent>
