Show score and reviews on manual exercise checking queue In case of some error on manual checkin save group and 'done' filters on queue page Exercise checking: select score from 0%, 25%, 50%, 75%, 100% or enter manually
Some layout changes

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1190,6 +1190,7 @@
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.date.js" />
     <Content Include="Scripts\notify-custom.min.js" />
+    <Content Include="Scripts\slide-checking.js" />
     <Content Include="Scripts\slide-comments.js" />
     <Content Include="Scripts\slide-diff.js" />
     <Content Include="Scripts\slide-guest.js" />
