Slide not found → 404 Catch exceptions on get last published version Search in groups and users list by lastname and firstname concatenation Vk auth settings into Web.Config

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -33,6 +33,8 @@
 		<add key="elmah.mvc.allowedUsers" value="*" />
 		<add key="elmah.mvc.route" value="elmah" />
 		<add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
+		<add key="owin.vk.appId" value="5333292" />
+		<add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
 	</appSettings>
 	<system.web>
 		<authentication mode="None" />
