--- a/src/uLearn/uLearn.csproj
+++ b/src/uLearn/uLearn.csproj
@@ -185,6 +185,7 @@
     <Compile Include="SampleAttribute.cs" />
     <Compile Include="Slide.cs" />
     <Compile Include="Model\Blocks\SlideBlock.cs" />
+    <Compile Include="SlideNotFoundException.cs" />
     <Compile Include="SolutionBuildResult.cs" />
     <Compile Include="SolutionBuilder.cs" />
     <Compile Include="SpellCheckExtentions.cs" />
