--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -91,6 +91,10 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework.Functions, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.Functions.1.3.1\lib\net45\EntityFramework.Functions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
@@ -322,9 +326,9 @@
     <Compile Include="Migrations\201609211423088_ExtractAutomaticCheckingIsRightAnswer.Designer.cs">
       <DependentUpon>201609211423088_ExtractAutomaticCheckingIsRightAnswer.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201610132201527_AddComputedColumnsForUser.cs" />
-    <Compile Include="Migrations\201610132201527_AddComputedColumnsForUser.Designer.cs">
-      <DependentUpon>201610132201527_AddComputedColumnsForUser.cs</DependentUpon>
+    <Compile Include="Migrations\201610200703516_AddUsersFullTextIndex.cs" />
+    <Compile Include="Migrations\201610200703516_AddUsersFullTextIndex.Designer.cs">
+      <DependentUpon>201610200703516_AddUsersFullTextIndex.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\ExerciseCodeReview.cs" />
     <Compile Include="Models\ExerciseCodeReviewModel.cs" />
@@ -821,8 +825,8 @@
     <EmbeddedResource Include="Migrations\201609211423088_ExtractAutomaticCheckingIsRightAnswer.resx">
       <DependentUpon>201609211423088_ExtractAutomaticCheckingIsRightAnswer.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201610132201527_AddComputedColumnsForUser.resx">
-      <DependentUpon>201610132201527_AddComputedColumnsForUser.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201610200703516_AddUsersFullTextIndex.resx">
+      <DependentUpon>201610200703516_AddUsersFullTextIndex.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
