User Unit Statistics: offline code review, simple exercise scoring Mobile version with «Slide for score»

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1197,6 +1197,7 @@
     <Content Include="Scripts\jquery.color-2.1.0.min.js" />
     <Content Include="Scripts\jquery.datetimepicker.full.min.js" />
     <Content Include="Scripts\jquery.datetimepicker.unobtrusive.js" />
+    <Content Include="Scripts\jquery.event.move.js" />
     <Content Include="Scripts\jquery.query-object.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
@@ -1449,6 +1450,7 @@
     <Content Include="Views\Exercise\SubmissionsPanel.cshtml" />
     <Content Include="Views\Exercise\Submission.cshtml" />
     <Content Include="Views\Exercise\_ExerciseScoreForm.cshtml" />
+    <Content Include="Views\Analytics\UserUnitStatistics.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
