--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Controllers\AuthenticationManager.cs" />
     <Compile Include="Controllers\CommentsController.cs" />
     <Compile Include="Controllers\ControllerUtils.cs" />
+    <Compile Include="Models\FilterOptions.cs" />
     <Compile Include="DataContexts\SlideCheckingsRepo.cs" />
     <Compile Include="Migrations\201608231750470_SlideChecking.cs" />
     <Compile Include="Migrations\201608231750470_SlideChecking.Designer.cs">
@@ -1199,6 +1200,7 @@
     <Content Include="Scripts\jquery.datetimepicker.unobtrusive.js" />
     <Content Include="Scripts\jquery.event.move.js" />
     <Content Include="Scripts\jquery.query-object.js" />
+    <Content Include="Scripts\jquery.smooth-scrolling.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.date.js" />
