--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -35,6 +35,8 @@
 		<add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
 		<add key="owin.vk.appId" value="5333292" />
 		<add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
+		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
+		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
 	</appSettings>
 	<system.web>
 		<authentication mode="None" />
