--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -45,7 +45,14 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="MSBuild" version="0.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Console" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.ConsoleRunner" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
