--- a/src/RunCsJob/RunCsJob.nuspec
+++ b/src/RunCsJob/RunCsJob.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Kontur.Ulearn.RunCsJob.Api</id>
+    <id>Kontur.Ulearn.RunCsJob</id>
     <version>$version$</version>
     <title>$title$</title>
     <authors>SKB Kontur</authors>
@@ -9,7 +9,7 @@
     <licenseUrl>https://ulearn.me/Home/Terms</licenseUrl>
     <projectUrl>https://ulearn.me</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Run C# Service API for ulearn mooc platform</description>
+    <description>Run C# Service for ulearn mooc platform</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2014–2016 SKB Kontur</copyright>
     <tags>ulearn education mooc</tags>
