Nuget: added internal dependencies

--- a/src/uLearn.Web/uLearn.Web.nuspec
+++ b/src/uLearn.Web/uLearn.Web.nuspec
@@ -13,6 +13,10 @@
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2014–2016 SKB Kontur</copyright>
     <tags>ulearn education mooc</tags>
+    <dependencies>
+      <dependency id="Kontur.Ulearn.RunCsJob.Api" version="(1.0,)" />
+      <dependency id="Kontur.Ulearn" version="(1.0,)" />
+    </dependencies>
   </metadata>
   <files>
     <!--
