--- a/src/uLearn/uLearn.nuspec
+++ b/src/uLearn/uLearn.nuspec
@@ -13,5 +13,8 @@
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2014–2016 SKB Kontur</copyright>
     <tags>ulearn education mooc</tags>
+    <dependencies>
+      <dependency id="Kontur.Ulearn.RunCsJob.Api" version="(1.0,)" />
+    </dependencies>
   </metadata>
 </package>
