--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -53,6 +53,7 @@
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net45" />
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.2" targetFramework="net45" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.5.0" targetFramework="net45" />
+  <package id="OctoPack" version="3.4.2" targetFramework="net45" developmentDependency="true" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="RazorGenerator.Mvc" version="2.3.12" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
