--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -11,6 +11,7 @@
   <package id="MSBuild" version="0.1.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
+  <package id="OctoPack" version="3.4.2" targetFramework="net461" developmentDependency="true" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net461" />
