--- a/src/RunCsJob.Service/App.config
+++ b/src/RunCsJob.Service/App.config
@@ -1,12 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <appSettings>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+	</configSections>
+  <appSettings>
 		<add key="submissionsUrl" value="https://localhost:44300/"/>
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF"/>
 		<add key="sleepSeconds" value="1"/>
 		<add key="jobsToRequest" value="5"/>
+		<add key="threadsCount" value="2"/>
 	</appSettings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
-    </startup>
+	<log4net>
+		<root>
+			<level value="DEBUG" />
+			<appender-ref ref="EventLogAppender" />
+			<appender-ref ref="FileAppender" />
+		</root>
+		<appender name="EventLogAppender" type="log4net.Appender.EventLogAppender">
+			<applicationName value="RunCsJob" />
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
+			</layout>
+		</appender>
+		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+			<file type="log4net.Util.PatternString" value="runcsjob-%utcdate{yyyy-MM-dd}.log" />
+			<appendToFile value="true" />
+			<rollingStyle value="Date" />
+			<datePattern value="yyyy-MM-dd" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<encoding value="utf-8" />
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%date [%thread] %-5level %logger — %message%newline" />
+			</layout>
+		</appender>
+	</log4net>
+	<startup> 
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+	</startup>
 </configuration>
