--- a/src/RunCsJob/packages.config
+++ b/src/RunCsJob/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Escapist" version="0.0.1" targetFramework="net461" />
   <package id="FluentAssertions" version="4.12.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net461" />
@@ -9,7 +10,7 @@
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.6" targetFramework="net45" />
   <package id="MSBuild" version="0.1.2" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
   <package id="NUnit" version="3.5.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11" targetFramework="net461" />
