--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -7,7 +7,8 @@
 	<configSections>
 		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
 		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
+		
 		<sectionGroup name="elmah">
 			<section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
 			<section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
@@ -35,9 +36,27 @@
 		<add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
 		<add key="owin.vk.appId" value="5333292" />
 		<add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
+		<add key="ulearn.coursesDirectory" value="" />
 		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
 	</appSettings>
+	<log4net>
+		<root>
+			<level value="DEBUG" />
+			<appender-ref ref="FileAppender" />
+		</root>
+		<appender name="FileAppender" type="log4net.Appender.RollingFileAppender">
+			<file type="log4net.Util.PatternString" value="ulearn-%utcdate{yyyy-MM-dd}.log" />
+			<appendToFile value="true" />
+			<rollingStyle value="Date" />
+			<datePattern value="yyyy-MM-dd" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<encoding value="utf-8" />
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%date [%thread] %-5level %logger [%property{address}, %property{user}] — %newline → %message%newline" />
+			</layout>
+		</appender>
+	</log4net>
 	<system.web>
 		<authentication mode="None" />
 		<compilation debug="true" targetFramework="4.5">
