--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -12,6 +12,7 @@
   <package id="JetBrains.Annotations" version="10.1.4" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="LtiLibrary.Core" version="1.5.4" targetFramework="net45" />
   <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-alpha" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
