--- a/src/uLearn/packages.config
+++ b/src/uLearn/packages.config
@@ -5,6 +5,7 @@
   <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
   <package id="Jint" version="2.5.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net45" />
