Fix one more bug on courseId case sensetiveness on admin panel

--- a/src/RunCsJob.Service/RunCsJob.Service.csproj
+++ b/src/RunCsJob.Service/RunCsJob.Service.csproj
@@ -50,9 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="RunCsJobService.cs">
-      <SubType>Component</SubType>
-    </Compile>
+    <Compile Include="RunCsJobService.cs" />
     <Compile Include="RunCsJobService.Designer.cs">
       <DependentUpon>RunCsJobService.cs</DependentUpon>
     </Compile>
