Added path for elmah log in Kontur-specifig configs

--- a/src/uLearn.Web/Web.Kontur.config
+++ b/src/uLearn.Web/Web.Kontur.config
@@ -8,4 +8,8 @@
 			<file type="log4net.Util.PatternString" value="C:\\ulearn\\logs\\ulearn-%date{yyyy-MM-dd}.log" xdt:Transform="SetAttributes" />
 		</appender>
 	</log4net>
+    <elmah>
+		<errorLog type="Elmah.XmlFileErrorLog, Elmah, Version=1.2.14318.0, Culture=neutral, PublicKeyToken=null" logPath="C:\\ulearn\\logs\\elmah" xdt:Transform="SetAttributes" />
+	</elmah>
+
 </configuration>
