Added SendGrid defaults to Web.config

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -17,7 +17,7 @@
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
-		<add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
+		<add name="DefaultConnection" connectionString="Data Source=ANDGEIN-LAPTOP;Initial Catalog=ulearn;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<appSettings file="private.settings">
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
@@ -39,6 +39,8 @@
 		<add key="ulearn.coursesDirectory" value="" />
 		<add key="telegram-commentsbot-token" value="243761360:AAGHkfoiIsTdLOG7t0RiTHWDY91068T2AW0" />
 		<add key="telegram-commentsbot-channel" value="@ulearncommentsdev" />
+        <add key="SendGrid.Login" value="" />
+        <add key="SendGrid.Password" value="" />
 	</appSettings>
 	<log4net>
 		<root>
